--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-  overflow-x :hidden;
-  overflow-y :scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 .container-header {
   display: flex;
@@ -560,7 +560,7 @@ h3#greetings {
 @media only screen and (min-width: 769px) {
   body {
     background-color: #e5e5e5;
-    margin: 0px;
+    margin: 0%;
   }
 
   .container-header {
