--- a/styles.css
+++ b/styles.css
@@ -784,7 +784,14 @@ h3#greetings {
     height: 48px;
     padding: 12px;
     font-weight: 700;
+    transition: background-color 1s, transform 1s;
   }
+
+  #projects-btn1:hover {
+    background-color: #172b4d;
+    opacity: 0.7;
+  }
+
 
   .works {
     display: none;
