--- a/styles.css
+++ b/styles.css
@@ -918,6 +918,12 @@ h3#greetings {
     font-weight: 700;
     font-size: 17px;
     line-height: 24px;
+    transition: background-color 1s, transform 1s;
+  }
+
+  #projects-btn1:hover {
+    background-color: #172b4d;
+    opacity: 0.7;
   }
 
   #divider {
